<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stopwatch</string>
    <string name="timer_title">Set Countdown Timer</string>
    <string name="timer_start">OK</string>
    <string name="timer_cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="countdown">COUNTDOWN</string>
    <string name="lap_times">LAP TIMES</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="play_store_uri">http://play.google.com/store/apps/details?id=com.cherry.android.stopwatch</string>
    <string name="countdown_complete">Countdown Complete!</string>
    <string name="default_time">00:00:00.000</string>
    <string name="rate_app">Rate app</string>
    <string name="settings">Settings</string>
    <string name="clear_all_laps">Clear all laps</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="reset">RESET</string>
    <string name="lap">LAP</string>
    <string name="content_desc_start_sw">Start/Pause Stopwatch</string>
    <string name="content_desc_start_cd">Start/Pause Countdown</string>
    <string name="content_desc_tab_layout">Tab Layout</string>
    <string name="content_desc_reset">Reset</string>
    <string name="content_desc_lap_time">Save Lap Time</string>
    <string name="settings_settings">SETTINGS</string>
    <string name="settings_about">ABOUT</string>
    <string name="settings_libraries">LIBRARIES</string>
    <string name="settings_sound_secs">Sound for Seconds</string>
    <string name="settings_vibrate">Vibrations</string>
    <string name="settings_endless_alert">Extra Long Alert</string>
    <string name="settings_animations">Hand Animations</string>
    <string name="settings_about_text">The Stopwatch</string>
    <string name="settings_libraries_text">None</string>
    <string name="reset_time">Reset Time</string>
    <string name="audio_toggle">Audio Toggle</string>
    <string name="number_5">5</string>
    <string name="number_10">10</string>
    <string name="number_15">15</string>
    <string name="number_20">20</string>
    <string name="number_25">25</string>
    <string name="number_30">30</string>
    <string name="number_35">35</string>
    <string name="number_40">40</string>
    <string name="number_45">45</string>
    <string name="number_50">50</string>
    <string name="number_55">55</string>
    <string name="number_60">60</string>
    <string name="number_70">70</string>
    <string name="number_80">80</string>
    <string name="number_90">90</string>

</resources>