<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:text="@string/settings_settings"
            android:textColor="#999999"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            android:background="#B2B2B2" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_seconds_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_sound_secs"
            android:textColor="#222222"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EBEBEB" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_animations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_animations"
            android:textColor="#222222"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EBEBEB" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_vibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_vibrate"
            android:textColor="#222222"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#EBEBEB" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_endless_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_endless_alert"
            android:textColor="#222222"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_about"
            android:textColor="#999999"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            android:background="#B2B2B2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_about_text"
            android:textColor="#222222"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_libraries"
            android:textColor="#999999"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            android:background="#B2B2B2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/settings_libraries_text"
            android:textColor="#222222"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>