<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Stopwatch.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings"
            tools:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroller_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/settings_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="2dp"
                android:background="#B2B2B2" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_seconds_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sound_secs"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#EBEBEB" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_animations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_animations"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#EBEBEB" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_vibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_vibrate"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#EBEBEB" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_endless_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_endless_alert"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings_about"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="2dp"
                android:background="#B2B2B2" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/settings_about_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#757575" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings_libraries"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="2dp"
                android:background="#B2B2B2" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/settings_libraries_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#757575" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
